payment api  added

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,7 @@
     "mysql2": "^3.14.0",
     "nodemon": "^3.1.9",
     "pg": "^8.14.1",
+    "razorpay": "^2.9.6",
     "Router": "^2.1.0",
     "sequelize": "^6.37.7"
   }
