--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@gsap/react": "^2.1.2",
     "@reduxjs/toolkit": "^2.6.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "gsap": "^3.12.7",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.487.0",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
@@ -20,8 +22,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
+    "react-secure-storage": "^1.0.1",
     "react-toastify": "^11.0.5",
-    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
