--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
@@ -20,9 +21,14 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
+    "multer-s3": "^3.0.1",
     "mysql2": "^3.14.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "npm": "^11.3.0",
     "pg": "^8.14.1",
     "razorpay": "^2.9.6",
     "Router": "^2.1.0",
